Add a README.md file

--- a/OpenGL.vcxproj
+++ b/OpenGL.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="src\shader.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="README.md" />
     <None Include="shaders\fragment_shader.glsl" />
     <None Include="shaders\vertex_shader.glsl" />
   </ItemGroup>
